-version-4.4.2-fontend-update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.mvc.view.prefix=/static/
 spring.mvc.view.suffix=.html
+spring.web.resources.cache.period=0
+spring.web.resources.chain.cache=false
